# mlt

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  0001-fix-heap-overflow-mlt_property_get_time.patch  0002-disable-ante-post-system-exec-by-default.patch  AGENTS.md  AUTHORS  CMakeLists.txt  CMakePresets.json  ChangeLog  Dockerfile  Doxyfile  Makefile  MltConfig.cmake.in  NEWS  README  README.md  configure  cppcheck.cfg  makefile  mlt++.pc.in  mlt-config-template  mlt-framework.pc.in  mlt-miracle.pc.in  mlt-valerie.pc.in  reconfigure  setenv  setenv_mc  vcpkg-configuration.json  vcpkg.json
src/examples/: CMakeLists.txt  Makefile  play.cpp
src/framework/: CMakeLists.txt  Makefile  chain_normalizers.ini  config.h  configure  metaschema.yaml  mlt-framework.pc.in  mlt.h  mlt.vers  mlt_animation.c  mlt_animation.h  mlt_api.h  mlt_audio.c  mlt_audio.h  mlt_cache.c  mlt_cache.h  mlt_chain.c  mlt_chain.h  mlt_consumer.c  mlt_consumer.h  mlt_deque.c  mlt_deque.h  mlt_events.c  mlt_events.h  mlt_factory.c  mlt_factory.h  mlt_field.c  mlt_field.h  mlt_filter.c  mlt_filter.h  mlt_frame.c  mlt_frame.h  mlt_geometry.c  mlt_geometry.h  mlt_image.c  mlt_image.h  mlt_link.c  mlt_link.h  mlt_log.c  mlt_log.h  (+38 more)
src/melt/: CMakeLists.txt  Jit.pb-c.c  Jit.pb-c.h  Jit.proto  JitControl.pb-c.c  JitControl.pb-c.h  JitControl.proto  JitStatus.pb-c.c  JitStatus.pb-c.h  JitStatus.proto  Makefile  configure  io.c  io.h  melt.c
src/mlt++/: CMakeLists.txt  Makefile  Mlt.h  MltAnimation.cpp  MltAnimation.h  MltAudio.cpp  MltAudio.h  MltChain.cpp  MltChain.h  MltConfig.h  MltConsumer.cpp  MltConsumer.h  MltDeque.cpp  MltDeque.h  MltEvent.cpp  MltEvent.h  MltFactory.cpp  MltFactory.h  MltField.cpp  MltField.h  MltFilter.cpp  MltFilter.h  MltFilteredConsumer.cpp  MltFilteredConsumer.h  MltFilteredProducer.cpp  MltFilteredProducer.h  MltFrame.cpp  MltFrame.h  MltGeometry.cpp  MltGeometry.h  MltImage.cpp  MltImage.h  MltLink.cpp  MltLink.h  MltMultitrack.cpp  MltMultitrack.h  MltParser.cpp  MltParser.h  MltPlaylist.cpp  MltPlaylist.h  (+22 more)
src/modules/: CMakeLists.txt  Makefile  configure  data_fx.properties  fezzik.dict  fezzik.ini
src/modules/avformat/: CMakeLists.txt  Makefile  Makefile.rej  audioconvert.h  blacklist.txt  common.c  common.h  common_swr.c  common_swr.h  configure  consumer_avformat.c  consumer_avformat.h  consumer_avformat.yml  factory.c  factory.h  ffmpeg.patch  filter_avcolour_space.c  filter_avcolour_space.h  filter_avcolour_space.yml  filter_avdeinterlace.c  filter_avdeinterlace.h  filter_avdeinterlace.yml  filter_avfilter.c  filter_avresample.c  filter_avresample.h  filter_info.yml  filter_swresample.c  filter_swresample.yml  filter_sws_colortransform.c  filter_sws_colortransform.yml  filter_swscale.c  filter_swscale.yml  generate_filter_info.py  link_avdeinterlace.c  link_avdeinterlace.yml  link_avfilter.c  link_swresample.c  link_swresample.yml  producer_avformat-novalidate.yml  producer_avformat.c  (+5 more)
src/modules/avsync/: Makefile  consumer_blipflash.c  factory.c  producer_blipflash.c
src/modules/core/: CMakeLists.txt  Makefile  composite_line_yuv_mmx.S  composite_line_yuv_sse2_simple.c  configure  consumer_multi.c  consumer_multi.yml  consumer_null.c  consumer_null.h  consumer_null.yml  data_fx.properties  factory.c  filter_audiochannels.c  filter_audiochannels.yml  filter_audioconvert.c  filter_audioconvert.yml  filter_audiomap.c  filter_audiomap.yml  filter_audioseam.c  filter_audioseam.yml  filter_audiowave.c  filter_audiowave.yml  filter_autofade.c  filter_autofade.yml  filter_box_blur.c  filter_box_blur.yml  filter_boxblur.c  filter_boxblur.h  filter_brightness.c  filter_brightness.h  filter_brightness.yml  filter_channelcopy.c  filter_channelcopy.h  filter_channelcopy.yml  filter_choppy.c  filter_choppy.yml  filter_color_transform.c  filter_color_transform.yml  filter_colorspace.c  filter_colorspace.yml  (+102 more)
src/modules/decklink/: CMakeLists.txt  Makefile  common.cpp  common.h  configure  consumer_decklink.cpp  consumer_decklink.yml  producer_decklink.cpp  producer_decklink.yml
src/modules/dgraft/: Makefile  filter_telecide.c
src/modules/dv/: Makefile  configure  consumer_libdv.c  consumer_libdv.h  consumer_libdv.yml  factory.c  producer_libdv.c  producer_libdv.h  producer_libdv.yml
src/modules/effectv/: Makefile  configure  factory.c  filter_burn.c  filter_burn.h  image.c  utils.c  utils.h
src/modules/feeds/: CMakeLists.txt  Makefile
src/modules/fezzik/: Makefile  configure  factory.c  producer_fezzik.c  producer_fezzik.h  producer_hold.c  producer_hold.h
src/modules/ffmpeg/: Makefile  audio.sh  configure  consumer_ffmpeg.c  consumer_ffmpeg.h  filter_ffmpeg_dub.c  producer_ffmpeg.c  producer_ffmpeg.h  video.sh
src/modules/frei0r/: CMakeLists.txt  Makefile  aliases.yaml  alpha_only.txt  blacklist.txt  configure  factory.c  filter_cairoblend_mode.c  filter_cairoblend_mode.yml  filter_frei0r.c  frei0r_helper.c  frei0r_helper.h  not_thread_safe.txt  param_name_map.yml  producer_frei0r.c  resolution_scale.yml  transition_frei0r.c
src/modules/gdk/: CMakeLists.txt  Makefile  configure  factory.c  filter_rescale.c  filter_rescale.yml  producer_pango.c  producer_pango.yml  producer_pixbuf.c  producer_pixbuf.yml  scale_line_22_yuv_mmx.S
src/modules/glaxnimate/: CMakeLists.txt  producer_glaxnimate.cpp  producer_glaxnimate.yml
src/modules/gtk2/: CMakeLists.txt  Makefile  configure  consumer_gtk2.c  consumer_gtk2.h  consumer_gtk2_preview.yml  factory.c  filter_dynamictext.c  filter_dynamictext.yml  filter_rescale.c  filter_rescale.yml  have_mmx.S  pixops.c  pixops.h  producer_count.c  producer_count.yml  producer_pango.c  producer_pango.h  producer_pango.yml  producer_pixbuf.c  producer_pixbuf.h  producer_pixbuf.yml  scale_line_22_33_mmx.S  scale_line_22_yuv_mmx.S
src/modules/inigo/: Makefile  configure  (+3 more)
src/swig/: CMakeLists.txt  Makefile  configure  mlt.i  mltpp.i
src/tests/: CMakeLists.txt  Makefile  README  charlie.c  clock16ntsc.pgm  common.pri  dan.c  dissolve.c  hello.c  io.c  io.h  kwalify_runtime_query.cmake  luma.c  pango.c  pixbuf.c  setenv  tests.pro
(+1361 files in other folders)
